<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/current_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/change_password"
        android:layout_marginStart="@dimen/margin_left_10"
        android:layout_marginTop="@dimen/margin_top_16"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16_24_32" />

    <View
        android:id="@+id/divider14"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="@dimen/margin_top_5"
        android:layout_below="@id/current_password_tv"
        />

    <TextView
        android:id="@+id/restore_purchases_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider14"
        android:layout_marginStart="@dimen/margin_left_10"
        android:layout_marginTop="@dimen/margin_top_5"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16_24_32"
        android:text="@string/restore_purchases"
        />

    <View
        android:id="@+id/divider15"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/restore_purchases_tv"
        android:layout_marginTop="@dimen/margin_top_5"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/delete_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider15"
        android:layout_marginStart="@dimen/margin_left_10"
        android:layout_marginTop="@dimen/margin_top_5"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16_24_32"
        android:text="@string/delete_account" />

    <View
        android:id="@+id/divider16"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/delete_account_tv"
        android:layout_marginTop="@dimen/margin_top_5"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/send_location_feedback_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider16"
        android:layout_marginStart="@dimen/margin_left_10"
        android:layout_marginTop="@dimen/margin_top_5"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16_24_32"
        android:text="@string/send_location_feedback" />

    <View
        android:id="@+id/divider17"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/send_location_feedback_tv"
        android:layout_marginTop="@dimen/margin_top_5"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider18"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_top_10"
        android:layout_above="@id/current_password_tv"
        android:background="?android:attr/listDivider" />
</RelativeLayout>