<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/current_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_marginStart="@dimen/margin_left_10"
        android:textSize="@dimen/text_size_12_20_28"
        android:text="@string/current_password" />


    <EditText
        android:id="@+id/current_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_password_tv"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_top_5"
        android:layout_marginStart="@dimen/margin_left_10"/>




    <TextView
        android:id="@+id/new_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@id/current_password_et"
        android:layout_marginTop="@dimen/margin_top_32"
        android:layout_marginStart="@dimen/margin_left_10"
        android:textSize="@dimen/text_size_12_20_28"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_password_tv"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_top_10"
        android:layout_marginStart="@dimen/margin_left_10"/>

    <View
        android:id="@+id/divider19"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_top_10"
        android:background="?android:attr/listDivider"
        android:layout_below="@+id/new_password_et" />

    <TextView
        android:id="@+id/forgor_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider19"
        android:layout_marginTop="@dimen/margin_top_32"
        android:textSize="@dimen/text_size_17_25_33"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>


</RelativeLayout>